--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,14 @@
     <string name="register">Register</string>
     <string name="login_button">LOG IN</string>
     <string name="register_button">SIGN UP</string>
+    <string name="error">Incorrect data</string>
+
+    <string name="photos">Photos</string>
+    <string name="map">Map</string>
+
+    <string name="add">Add</string>
+    <string name="menu">Menu</string>
+
+    <string name="comment">Comment</string>
+    <string name="send_button">Send</string>
 </resources>
